--- a/Kudiyarov.StreetFighter6/appsettings.json
+++ b/Kudiyarov.StreetFighter6/appsettings.json
@@ -1,5 +1,9 @@
 {
   "AllowedHosts": "*",
+  "Authentication": {
+    "UserAgent": "",
+    "Cookie": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
