--- a/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
+++ b/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Kudiyarov.StreetFighter6.HttpDal\Kudiyarov.StreetFighter6.HttpDal.csproj" />
+    </ItemGroup>
+
 </Project>
