entities moved to separate proj

--- a/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
+++ b/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Kudiyarov.StreetFighter6.Common\Kudiyarov.StreetFighter6.Common.csproj" />
       <ProjectReference Include="..\Kudiyarov.StreetFighter6.HttpDal\Kudiyarov.StreetFighter6.HttpDal.csproj" />
     </ItemGroup>
 
