add delay section

--- a/Kudiyarov.StreetFighter6/appsettings.json
+++ b/Kudiyarov.StreetFighter6/appsettings.json
@@ -4,6 +4,9 @@
     "UserAgent": "",
     "Cookie": ""
   },
+  "Configuration": {
+    "Delay": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
