profile id to variable

--- a/Kudiyarov.StreetFighter6.HttpDal/Kudiyarov.StreetFighter6.HttpDal.csproj
+++ b/Kudiyarov.StreetFighter6.HttpDal/Kudiyarov.StreetFighter6.HttpDal.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Kudiyarov.StreetFighter6.Common\Kudiyarov.StreetFighter6.Common.csproj" />
+    </ItemGroup>
+
 </Project>
