--- a/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
+++ b/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.3.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.2.0" />
       <PackageReference Include="Spectre.Console" Version="0.49.1" />
     </ItemGroup>
