--- a/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
+++ b/Kudiyarov.StreetFighter6/Kudiyarov.StreetFighter6.csproj
@@ -4,7 +4,11 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
+
+    <PropertyGroup>
         <ServerGarbageCollection>false</ServerGarbageCollection>
+        <ConcurrentGarbageCollection>false</ConcurrentGarbageCollection>
     </PropertyGroup>
 
     <ItemGroup>
